# ggnn

./: .gitignore  CMakeLists.txt  README.md
include/: CPackConfig.cmake  CPackSourceConfig.cmake
include/ggnn/: cuda_knn_ggnn.cuh  cuda_knn_ggnn_gpu_instance.cuh
include/ggnn/query/: cuda_knn_ggnn_query.cuh
include/ggnn/utils/: cuda_knn_dataset.cuh  cuda_knn_ggnn_results.cuh
script/: parse.py  run.sh
src/: heavy.cu  light.cu
